--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="currentTime">00:00:00</div>
 
   <label for="alarmTime">Set Alarm:</label>
-  <input type="time" id="alarmTime" required>
+  <input type="datetime-local" id="alarmTime" required>
 
   <br><br>
   <button onclick="setAlarm()">Set Alarm</button>
