--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alarm Clock with Differential Equation</title>
   <link rel="manifest" href="manifest.json">
+  <script src="
+https://cdn.jsdelivr.net/npm/notifyjs@3.0.0/dist/notify.min.js
+"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
