--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ https://cdn.jsdelivr.net/npm/notifyjs@3.0.0/dist/notify.min.js
 
   <h1>Alarm Clock</h1>
   
-  <div id="currentTime">00:00:00</div>
 
   <label for="alarmTime">Set Alarm:</label>
   <input type="datetime-local" id="alarmTime" required>
@@ -46,7 +45,7 @@ https://cdn.jsdelivr.net/npm/notifyjs@3.0.0/dist/notify.min.js
 
   <!-- Differential Equation Problem Box -->
   <div id="equationBox">
-    <h3>Solve this differential equation to turn off the alarm:</h3>
+    <h3>Solve this equation to turn off the alarm:</h3>
     <div id="equationProblem"></div>
     <input type="text" id="equationAnswer" placeholder="Enter your answer">
     <button onclick="checkAnswer()">Submit</button>
