--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://cdn.jsdelivr.net/npm/notifyjs@3.0.0/dist/notify.min.js
     <p id="resultMessage"></p>
   </div>
 
-  <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
+  <audio id="alarmSound" loop src="alarm.mp3" preload="auto"></audio>
 
   <script src="main.js"></script>
 
